# scrnaseq-hodge-pipeline

./: .gitignore  CLAUDE.md  MIGRATION_REPORT.md  README.md  app.py  launcher.py  project_config.yaml  pyproject.toml  requirements.txt  run_pipeline.py
benchmark/: README.md
benchmark/glioma/: README.md  run_glioma_pseudotime_insertion.py  run_idh_stratified_insertion.py  step8_pseudotime.py  step9_gene_insertion.py
benchmark/mendelian_randomization/: 00_inspect_data.R  00b_inspect_als.R  02_run_mr.R  03_run_mr_clumped.R  03b_run_mr_api_clump.R  04_relaxed_threshold_mr.R  05_smr_heidi.R  06_final_figures.R  07_rqc_pathway_mr.R  08_mam_pathway_mr.R  README.md  set_opengwas_token.R  setup_local_clumping.R
benchmark/norman_perturb_seq/: README.md  run_grnboost2_norman.py  run_ids_norman.py
benchmark/shen_crispr/: README.md  ortholog_map.py  perturbation_loader.py  run_shen_ids.py  run_shen_ids_sparse.py  track2_gene_hodge.py
benchmark/timevault/: README.md  run_tas.py
data/: README.md
data/metadata/: als_causative_genes.json
part3/: README.md
part3/docs/: 26_MODULES_COMPLETE_LIST.md  ALL_CELLTYPES_LIST.md  ALS_Cortex_IDS_Network_Paper.md  ALS_TRIGGER_PROJECT_HYBRID_FINAL.md  ATM_fire_origin_evidence_summary.md  CELL_STATE_CAUSAL_HIERARCHY.md  CELL_TIMELINE_GUIDE.md  COMPREHENSIVE_PAPER.md  COMPREHENSIVE_PAPER_DETAILED.md  COMPREHENSIVE_PROJECT_REPORT.md  CONTINUOUS_PT_ANALYSIS_SUMMARY.md  (+7 more)
scripts/: __init__.py  allgene_insertion.py  bootstrap.py  config.py  data_loader.py  de_sals_only.py  directional.py  enrichment.py  file_checker.py  gene_hodge.py  hodge.py  lane_a.py  lane_b.py  log_utils.py  multi_transition.py  nemf_screen.py  pca_engine.py  pseudotime.py  random_baseline.py  residuals.py  seed_utils.py  sparse_hodge.py  spd.py  three_phi_residual.py  two_axis.py  whitening.py
(+83 files in other folders)
